style/index.css
html {
	height:     calc(100% - 16px);
}
body {
	height:      100%;
	width:       calc(100vw - 68px);
	margin-left: 34px;
	background:  #4a98d3;
}

select,
button {
	cursor: pointer;
}

h2 {
	margin-top:       7px;
	margin-bottom:    14px;
}

/* header elements */

.header h2 {
	display:          inline-block;
	max-width:        40%;
}
.header .menu {
	float:            right;
	margin-bottom:    12px;
}
.menu label {
	font-weight:      bold;
}
.menu button {
	margin:           5px;
}
.team-container {
	display:          inline-block;
	vertical-align:   bottom;
}
#button_loadteam,
#button_clearteam {
	float:            right;
	font-size:        8px;
}
#div_team {
	display:          flex;
	justify-content:  center;
	align-items:      center;
	cursor:           default;
	border:           1px solid #787878;
	background-color: lightgray;
	color:            gray;
	font-size:        8pt;
	border-radius:    5px;
}
.menugroup {
	display:          inline-flex;
	position:         relative;
	vertical-align:   bottom;
	margin-left:      10px;
}
.format-container {
	min-height:       41px;
	padding:          2px;
}
.search-container {
	position:         relative;
	z-index:          1;
	width:            216px;
	height:           100%;
	margin-left:      10px;
}
.search-wrapper {
	position:         absolute;
	width:            100%;
	padding:          2px;
}
#input_search {
	display:          block;
	width:            calc(100% - 8px);
	padding:          2px;
}
#div_searchresults {
	width:            100%;
}
#div_searchresults:not(.active) {
	display:             none;
}
#div_searchresults table {
	table-layout:     fixed;
	box-sizing:       border-box;
	width:            100%;
}
#div_searchresults tr {
	display:          none;
}
#div_searchresults tr.searchresult {
	background:       white;
	display:          block;
	cursor:           pointer;
	border-style:     solid;
	border-color:     navy;
	border-width:     1px 2px 1px 2px;
	border-radius:    3px;
	margin:           1px;
}
#div_searchresults tr.searchresult:hover {
	background-color: #a7cce5 !important;
}
#div_searchresults tr.searchresult.selected {
	background-color: lightblue;
}

/* elements in the .main container */

.main > .tab-content {
	position:            relative;
}
.main > .tab-content > .content {
	max-height:          calc(100vh - 167px);
	overflow-y:          auto;
}
.slider:not(.active) {
	display:             none;
}

#div_about {
	position:            absolute;
	width:               calc(100% - 30px);
	height:              calc(100% - 30px);
}
#div_about .slider.active {
	position:            absolute;
	display:             flex;
	flex-direction:      column;
	justify-content:     center;
	align-items:         center;
	width:               calc(30% - 50px);
	left:                50%;
	top:                 45%;
	transform:           translate(-50%, -45%);
	padding:             24px;
	z-index:             1;
	text-align:          center;
	border-radius:       30px;
	color:               #fff;
	text-shadow:         1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
	background:          rgba(0, 0, 0, 0.85);
}
#div_about .slider p {
	padding:             2px;
	background:          rgba(255, 255, 255, 0.3);
}
#div_about .slider tr {
	padding:             2px;
	background:          rgba(255, 255, 255, 0.3);
}
#div_about .slider td {
	padding:             0px 15px;
	margin:              2px;
}
#div_about .slider th {
	padding:             0px 15px;
}

#div_about .slider a {
	text-decoration:     none;
	color:               #fff;
}
#div_about .slider a:hover {
	text-decoration:     underline;
}

#tabcontent_main_about {
	height:              calc(100vh - 207px);
	max-height:          61vw;
	margin-bottom:       40px;
	width:               100%;
	background-size:     contain;
	background-image:    url(./../cover-art-gen7OU.png);
	background-repeat:   no-repeat;
	background-position: top center;
}
#tabcontent_main_about:after {
	content:             'Team rating tool.';
	position:            absolute;
	left:                50%;
	bottom:              20px;
	transform:           translate(-50%);
	padding:             4px;
}

#tab_main_viability a {
	padding-left:        32px;
	background-image:    url("./../img/repeatball.png");
	background-repeat:   no-repeat;
	background-position: 5px;
}
#tab_main_breakit a {
	padding-left:        45px;
	background-image:    url("./../img/681-b.png");
	background-repeat:   no-repeat;
	background-position: 5px;
}
#tab_main_wallit a {
	padding-left:        37px;
	background-image:    url("./../img/681.png");
	background-repeat:   no-repeat;
	background-position: 5px;
}
#tab_main_faq a {
	padding-left:        30px;
	background-image:    url("./../img/201.png");
	background-repeat:   no-repeat;
	background-position: 2px;
}
#tab_main_viability-sets,
#tab_main_breakit-sets,
#tab_main_wallit-sets {
	margin-left:         -2px;
}

#div_builddata:not(.active) {
	display:             none;
}
#div_builddata {
	margin-bottom:       18px;
}
#textarea_builddata {
	box-sizing:          border-box;
	min-height:          100px;
	min-width:           100%;
	max-width:           100%;
}

/* popup elements */

.popup:not(.active) {
	display:          none;
}
.popup {
	position:         absolute;
	z-index:          100;
	max-height:       90vh;
	margin:           150px 5px 5px 5px;
	padding:          15px;
	overflow-y:       auto;
	background-color: white;
	border:           4px solid Black;
}
.popup button {
	margin: 3px;
}

.objectinspector {
	margin:           15px;
}
.objectinspector tr {
	vertical-align:   top;
	margin:           1px;
}
.objectinspector pre {
	display:          inline-block;
	margin:           0px;
}
.objectinspector summary {
	white-space:      nowrap;
	overflow-x:       hidden;
}
.objectinspector .desc-wrapper {
	display:          inline-block;
	white-space:      normal;
	vertical-align:   top;
}
.objectinspector .desc {
	color:            lightgrey;
}

